--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "stripe": "^17.7.0",
     "vue": "latest",
     "vue-router": "latest"
+    "vite-plugin-vsharp": "^1.8.1"
   },
   "devDependencies": {
     "vite-plugin-vsharp": "^1.8.1"
