--- a/package.json
+++ b/package.json
@@ -23,10 +23,6 @@
     "prisma": "^6.5.0",
     "stripe": "^17.7.0",
     "vue": "latest",
-    "vue-router": "latest",
-    "vite-plugin-vsharp": "^1.8.1"
+    "vue-router": "latest"
   },
-  "devDependencies": {
-    "vite-plugin-vsharp": "^1.8.1"
-  }
 }
